# chantage

./: CMakeLists.txt  Makefile  README.md  chantage.ppf
cmake/: ToolchainPSP.cmake  toolchain.cmake
example/: CMakeLists.txt  slowdown.c  test_mod.c
include/: elf.h  psp.h
include/chantage/: chantage.h  elf.h  prx.h  psp.h  psp_module_info.h  types.h  util.h
include/chantage_loader/: loader.h
include/loader/: common.h
include/prx/: prx.h
include/sys/: regdef.h
src/: CMakeLists.txt  binary.ld  elf.ld  flat_binary.ld  libchantage.S  link.ld  link_loader.ld  prx_loader.c  slowdown.c  test_mod.c
src/chantage/: CMakeLists.txt  _start.c  abilities.c  battledata.c  chantage.ld  chantage_impl.h  function_registry.c  hooks.c  impl.h  inventory.c  items.c  mods.c  start.c  text.c  title_screen.c  title_text.c  title_text.inc  util.c
src/chantage_loader/: CMakeLists.txt  _start.S  _start.c  chantage_loader.c  elf.c  malloc.c  wrapper.S
src/libchantage/: CMakeLists.txt  libchantage.S  libchantage.c
src/libprx/: CMakeLists.txt  prx_loader.c
src/prx_loader/: prx_loader.c
